tests/paczka1/small_fuzzy/90530950.err
Error in line 4: zSzM1wu A605 42,8
Error in line 2: S45 S45 38,8
Error in line 6: zSzM1wu S973 29,9
